change jvmargs - use G1GC